tests/NormalTests/paczka1/small_fuzzy/47030411.err
Error in line 1: l2QuKI A995 62,2
Error in line 5: or2rPFyu A173 98,7
Error in line 10: EncjuC A46 153,29
Error in line 12: or2rPFyu A397 12,9
